# KafkaTutorial

./: README.md
c_example/: CMakeLists.txt  README.md  common.c  common.h  consumer.c  producer.c
cpp/: README.md
cpp/cppkafka/: CMakeLists.txt  README.md  conanfile.txt  consumer.cpp  producer.cpp
cpp/librdkafka/: CMakeLists.txt  README.md  conanfile.txt  consumer.cpp  producer.cpp
cpp/modern-cpp-kafka/: CMakeLists.txt  README.md  conanfile.txt  consumer.cpp  producer.cpp
demo/: README.md  consumer.py  docker-compose.yaml  producer.py
docker_compose/: README.md
docker_compose_2/: README.md
python_example/: Dockerfile  README.md  consumer.py  producer.py
redpanda/: README.md
redpanda/demo/: README.md  docker-compose.yml  otel-collector-config.yml  redpanda-dashboard.json
redpanda/demo/prometheus-data/: prometheus.yml
redpanda/demo/redpanda-node/: Dockerfile  package.json
redpanda/demo/redpanda-node/src/: consumer.ts  index.ts  producer.ts
redpanda/e_commerce_example/: compose.yaml
redpanda/e_commerce_example/order-service/: Dockerfile  package.json
redpanda/e_commerce_example/product-service/: go.mod  main.go
redpanda/e_commerce_monitoring_example/: README.md  compose.yaml  nginx.conf  prometheus.yml
redpanda/e_commerce_monitoring_example/order-service/: server.js
redpanda/e_commerce_monitoring_example/product-service/: Dockerfile
redpanda/e_commerce_monitoring_example/user-service/: app.py
